my-validating-webhook/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validate-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: validate-webhook
  template:
    metadata:
      labels:
        app: validate-webhook
    spec:
      containers:
        - name: validate-webhook
          image: alperencelik/my-validating-webhook:latest 
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
